# zeroday

./: .env.example  .env.exaple  .gitignore  .pyproject.toml  README.md  api_balance.py  db.py  logger_utils.py  main_crawler.py  models.py  process_vulnerability.py  pyproject.toml  zeroday_scraper.py
lib/: api_balance.py  config.py  logger_utils.py  process_vulnerability.py  query.py  send_report.py  zeroday_scraper.py
lib/db/: db.py  institution.csv  models.py
