[project]
name = "zeroday-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]
